<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_container"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="@string/fragment_tag_maps"
    app:uiRotateGestures="false"
    app:uiTiltGestures="false"
    app:uiZoomControls="true"
    tools:context=".ui.maps.MapsFragment" />