...
    <RelativeLayout
        android:id="@+id/settings_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/call_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
...
