...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_preview"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/create_post_local_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_preview"
                    android:paddingTop="8dp"
                    android:scaleType="centerCrop" />

...
                app:counterMaxLength="@integer/maximum_post_length"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/maximum_post_length" />

            </com.google.android.material.textfield.TextInputLayout>

...
