<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_post"
        android:icon="@drawable/ic_add"
        android:menuCategory="secondary"
        android:orderInCategory="100"
        android:title="@string/menu_new_post"
        app:showAsAction="ifRoom" />

</menu>